[gd_scene load_steps=20 format=3 uid="uid://bj8w60mbxu343"]

[ext_resource type="Material" uid="uid://bccsu1ub6vu34" path="res://graphics/materials/arer_generico.tres" id="1_25tss"]
[ext_resource type="PackedScene" uid="uid://d20x3gfrmoext" path="res://comps/scenes/health_component.tscn" id="1_jp1t4"]
[ext_resource type="Script" path="res://heroes/#base/HeroBase.gd" id="1_ofmxg"]
[ext_resource type="PackedScene" uid="uid://dvaipocthe14r" path="res://comps/scenes/damage_mgr_component.tscn" id="2_qs483"]
[ext_resource type="PackedScene" uid="uid://ek5hq7khlfdc" path="res://comps/scenes/battack_component.tscn" id="3_uakab"]
[ext_resource type="PackedScene" uid="uid://bid6uhyybfx4x" path="res://comps/scenes/navigation_component.tscn" id="5_2h5n0"]
[ext_resource type="PackedScene" uid="uid://cwhihpdu5pw3h" path="res://comps/scenes/gui_component.tscn" id="9_q2u5u"]
[ext_resource type="PackedScene" uid="uid://bfx1wxpmwujue" path="res://comps/scenes/sanity_component.tscn" id="10_8gc1h"]
[ext_resource type="PackedScene" uid="uid://boihyru5nyiju" path="res://comps/scenes/xp_component.tscn" id="10_ks4ue"]
[ext_resource type="PackedScene" uid="uid://cx88lgs15cpdr" path="res://comps/scenes/effects_component.tscn" id="12_4xb0n"]
[ext_resource type="PackedScene" uid="uid://podwdpuarh5s" path="res://comps/scenes/state_machine_component.tscn" id="12_83kr5"]
[ext_resource type="Script" path="res://scripts/states/HeroAliveState.gd" id="13_0ihae"]
[ext_resource type="Script" path="res://comps/scripts/TeamComponent.gd" id="13_c5rvx"]
[ext_resource type="Script" path="res://scripts/states/HeroDeadState.gd" id="13_f12rq"]
[ext_resource type="PackedScene" uid="uid://cg1wvqhrrctxm" path="res://comps/scenes/animation_component.tscn" id="15_2masr"]
[ext_resource type="PackedScene" uid="uid://bcfk30leqvxws" path="res://objs/pointer/Pointer.tscn" id="15_6unsq"]
[ext_resource type="Script" path="res://comps/scripts/AbilityComponent.gd" id="16_4xyog"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wvo1n"]
material = ExtResource("1_25tss")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ey8t6"]

[node name="Hero1" type="CharacterBody3D" node_paths=PackedStringArray("dmgr", "xp_comp", "batk_comp", "fx_comp", "anim_comp", "state_machine_comp", "alive_state", "team_comp", "abilities_comp", "pointer")]
script = ExtResource("1_ofmxg")
dmgr = NodePath("comps/DamageMgrComponent")
xp_comp = NodePath("comps/XPComponent")
batk_comp = NodePath("comps/BAttackComponent")
fx_comp = NodePath("comps/EffectsComponent")
anim_comp = NodePath("comps/AnimationComponent")
state_machine_comp = NodePath("comps/StateMachineComponent")
alive_state = NodePath("comps/StateMachineComponent/HeroAliveState")
team_comp = NodePath("comps/TeamComponent")
abilities_comp = NodePath("comps/AbilitiesComponent")
pointer = NodePath("Pointer")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_wvo1n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_ey8t6")

[node name="comps" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)

[node name="DamageMgrComponent" parent="comps" node_paths=PackedStringArray("health_component", "effects_component") instance=ExtResource("2_qs483")]
health_component = NodePath("../HealthComponent")
effects_component = NodePath("../EffectsComponent")

[node name="HealthComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("1_jp1t4")]
hero = NodePath("../..")

[node name="BAttackComponent" parent="comps" node_paths=PackedStringArray("nav_comp", "hero") instance=ExtResource("3_uakab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
atk_damage = 4.0
atk_cooldown = 0.65
range = 3.0
nav_comp = NodePath("../NavComponent")
hero = NodePath("../..")

[node name="NavComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("5_2h5n0")]
path_height_offset = -0.25
hero = NodePath("../..")

[node name="GUIComponent" parent="comps" node_paths=PackedStringArray("health_comp", "sanity_comp", "fx_comp", "team_comp") instance=ExtResource("9_q2u5u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.92241, 0)
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
fx_comp = NodePath("../EffectsComponent")
team_comp = NodePath("../TeamComponent")

[node name="SanityComponent" parent="comps" node_paths=PackedStringArray("health_comp") instance=ExtResource("10_8gc1h")]
health_comp = NodePath("../HealthComponent")

[node name="XPComponent" parent="comps" node_paths=PackedStringArray("dead_state", "hero") instance=ExtResource("10_ks4ue")]
dead_state = NodePath("../StateMachineComponent/HeroDeadState")
hero = NodePath("../..")

[node name="EffectsComponent" parent="comps" node_paths=PackedStringArray("battack_comp", "nav_comp", "health_comp", "sanity_comp", "hero") instance=ExtResource("12_4xb0n")]
battack_comp = NodePath("../BAttackComponent")
nav_comp = NodePath("../NavComponent")
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
hero = NodePath("../..")

[node name="StateMachineComponent" parent="comps" node_paths=PackedStringArray("initial_state") instance=ExtResource("12_83kr5")]
initial_state = NodePath("HeroAliveState")

[node name="HeroAliveState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("nav", "battack", "sanity", "xp_comp", "hero", "hero_col", "health_comp")]
script = ExtResource("13_0ihae")
nav = NodePath("../../NavComponent")
battack = NodePath("../../BAttackComponent")
sanity = NodePath("../../SanityComponent")
xp_comp = NodePath("../../XPComponent")
hero = NodePath("../../..")
hero_col = NodePath("../../../CollisionShape3D")
health_comp = NodePath("../../HealthComponent")

[node name="HeroDeadState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("fx_comp", "sanity_comp", "health_comp", "hero", "hero_col")]
script = ExtResource("13_f12rq")
fx_comp = NodePath("../../EffectsComponent")
sanity_comp = NodePath("../../SanityComponent")
health_comp = NodePath("../../HealthComponent")
hero = NodePath("../../..")
hero_col = NodePath("../../../CollisionShape3D")

[node name="TeamComponent" type="Node" parent="comps" node_paths=PackedStringArray("hero")]
script = ExtResource("13_c5rvx")
hero = NodePath("../..")

[node name="AnimationComponent" parent="comps" node_paths=PackedStringArray("nav_comp", "batk_comp", "hero") instance=ExtResource("15_2masr")]
nav_comp = NodePath("../NavComponent")
batk_comp = NodePath("../BAttackComponent")
hero = NodePath("../..")

[node name="AbilitiesComponent" type="Node" parent="comps"]
script = ExtResource("16_4xyog")

[node name="Pointer" parent="." instance=ExtResource("15_6unsq")]
